--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,13 +7,14 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  
 }
 
 
 
-
+body {
+  color: rgb(var(--foreground-rgb));
+}
 
 .loos-condensed-font {
   font-family: "Loos ExtraWide", sans-serif;
