--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
 
 
 @import url("https://use.typekit.net/jsd3bqv.css");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -22,6 +23,12 @@ body {
   font-weight: 700;
   font-style: normal;
 
+}
+
+.roboto-bold {
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
+  font-style: normal;
 }
 
 @layer utilities {
