--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,16 +6,12 @@
 @import url("https://use.typekit.net/jsd3bqv.css");
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  
-}
+
 
 
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: white;
+  background-color: white;
 }
 
 .loos-condensed-font {
@@ -29,12 +25,6 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 600;
   font-style: normal;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
 }
 
 
